--- a/css/bartek.css
+++ b/css/bartek.css
@@ -36,7 +36,7 @@ main img{
 	margin-bottom: 100px;
 	padding-left: 110px;
 }
-iframe{
+/* iframe{
 	width: 640px;
 	height: 360px;
 	margin-bottom: 170px;
@@ -59,7 +59,7 @@ iframe{
   right: 0;
   width: 50%;
   height: 50%;
-}
+} */
 h2{
 	font-size: 40px;
 	margin-top: 100px;
