--- a/css/bartek.css
+++ b/css/bartek.css
@@ -36,7 +36,7 @@ main img{
 	margin-bottom: 100px;
 	padding-left: 110px;
 }
-/* iframe{
+ video{
 	width: 640px;
 	height: 360px;
 	margin-bottom: 170px;
@@ -51,15 +51,7 @@ main img{
   padding-top: 100%;
   }
  
-.responsive-iframe {
-  position: absolute;
-  top: 0;
-  left: 60px;
-  bottom: 0;
-  right: 0;
-  width: 50%;
-  height: 50%;
-} */
+
 h2{
 	font-size: 40px;
 	margin-top: 100px;
