--- a/css/bartek.css
+++ b/css/bartek.css
@@ -44,12 +44,12 @@ main img{
 	margin-top: 100px;
 }
 
-.container{
+/* .container{
   position: relative;
   overflow: hidden;
   width: 100%;
   padding-top: 100%;
-  }
+  } */
  
 
 h2{
