--- a/css/bartek.css
+++ b/css/bartek.css
@@ -44,6 +44,14 @@ main img{
 	margin-top: 100px;
 }
 
+video2{
+	width: 720px;
+	height: 1080px;
+	margin-bottom: 170px;
+	margin-left: 170px;
+	margin-top: 100px;
+}
+
 /* .container{
   position: relative;
   overflow: hidden;
